Updated figures and paper

--- a/JCH_Oral_Paper.tex
+++ b/JCH_Oral_Paper.tex
@@ -34,19 +34,19 @@
 \section{Introduction}
 
     A long, outstanding problems in physics is that seemingly a majority of the
-    universe is composed of non-baryonic, dark matter and dark energy. Evidence
-    for this dark matter and dark energy is well established; in the discrepant
-    rotation velocity curves of stars around galactic centers and the inferred
-    mass through gravitational lensing observation, as well as others. Yet, the
-    properties of dark matter and dark energy are not very well understood
-    beyond their gravitational interactions. The particle nature of dark matter
-    and its mass are still unconstrained and models with different mass ranges
-    abound. One of the possible mass ranges is that of the WIMPs which would
-    have a mass on the order of the $W$ or $Z$ boson and greater.  However,
-    there is another mass regime of increasing interest, LDM or light dark
-    matter which has a sub-GeV mass. Within this lighter mass range the model of
-    interest to this paper introduces a new light force with a corresponding
-    mediator, $A'$, that kinetically mixes with the standard model photon.
+    universe is composed of non-baryonic, dark matter. Evidence for this dark
+    matter is well established; in the discrepant velocity curves of stars
+    orbiting galactic centers and the inferred mass through gravitational
+    lensing observation, as well as others. Yet, the properties of dark matter
+    and are not very well understood beyond their gravitational
+    interactions. The particle nature of dark matter and its mass are still
+    unconstrained and models with different mass ranges abound. One of the
+    possible mass ranges is that of the WIMPs which would have a mass on the
+    order of the $W$ or $Z$ boson and greater.  However, there is another mass
+    regime of increasing interest, light dark matter (LDM) which has a sub-GeV
+    mass. Within this lighter mass range the model of interest to this paper
+    introduces a new light force with a corresponding mediator, $A'$, that
+    kinetically mixes with the standard model photon.
 
     A possible method of detecting light dark matter candidates under such a
     model is by explicitly producing them via a ``dark bremsstrahlung'' process.
@@ -60,29 +60,33 @@
 
 \section{Theory}
 
-    \subsection{A Vector Portal}
+    \subsection{Thermal Origins}
 
         A hypothesis that is upheld in many dark matter theories is that dark
         matter was thermally created in the early, hot universe and that it was
-        in thermal equilibrium with all other matter.  Dark matter particle and
-        antiparticle pairs were constantly annihilating and being created in the
-        thermal bath and eventually the temperature of the universe decreased enough
-        that creation was no longer viable; however, the dark matter continued
-        to annihilate. Then as the expansion rate of the universe exceeded the
+        in thermal equilibrium with all other matter.  Under this hypothesis,
+        dark matter particle and antiparticle pairs were constantly annihilating
+        and being created in the thermal bath. Eventually, with the expansion of
+        the universe, the temperature of the universe decreased enough that
+        creation was no longer viable; however, the dark matter continued to
+        annihilate. Then as the expansion rate of the universe exceeded the
         annihilation rate of the dark matter particles, a relic density was
         ``frozen out'' and is what we observe today; the thermal relic. This
         thermal origin constrains the possible mass range for dark matter from
         10 keV to 10 TeV. The thermal relic density that is observed today in
         turn implies a minimum coupling and cross section for annihilation of
         the dark matter particles $\sigma v \approx 3 \times 10^{-26}
-        \text{cm}^3/s$. For weakly interacting, massive dark matter (WIMPs) the
-        annihilation rate can be entirely achieved through a weak force coupling
-        alone--the WIMP miracle; but for light dark matter ($m_{\text{DM}} \lesssim \text{GeV}$)
-        the weak coupling is not sufficient, LDM would have been overproduced in
-        the early universe.  In order for light dark matter to have been in
-        thermal equilibrium in the early universe requires the addition of new
-        light forces and corresponding mediators to annihilate through
-        \cite{Holdom}.
+        \text{cm}^3/\text{s}$. 
+        
+    \subsection{A Vector Portal}
+        For weakly interacting, massive dark matter particles (WIMPs) the
+        relic density can be entirely achieved through a weak force coupling
+        alone---the WIMP miracle; but for light dark matter ($m_{\text{DM}}
+        \lesssim \text{GeV}$) the weak coupling is not sufficient, LDM would
+        have been overproduced in the early universe.  In order for light dark
+        matter to have been in thermal equilibrium in the early universe
+        requires the addition of new light forces and corresponding mediators to
+        annihilate through \cite{Holdom}.
 
         A few portals are possible: a Higgs, lepton and vector portals
         \cite{Pospelov}. The most predictive model \cite{Gordon} of interest to
@@ -131,7 +135,8 @@
         Now it is seen that the $A'$ couples to the fermion current with a
         coupling strength of $\epsilon e Q_f$.\footnote{Here we assumed
         fermionic dark matter. For bosonic dark matter the last term in
-        \eqref{eq:1} becomes $|D_{\mu}\phi|^2 - m_{\phi}^2\phi^{*}\phi$.} 
+        \eqref{eq:1} becomes $|D_{\mu}\phi|^2 - m_{\phi}^2\phi^{*}\phi$. For the
+        purposes of this paper the choice is arbitrary.} 
         \\
         \begin{figure}[ht]
             \centering
@@ -291,7 +296,7 @@
     $\times$ 150 $\mu$m. The pixel tracker provides excellent resolution in $r$
     and $\phi$ allowing for precise measurements of momentum to be calculated
     from reconstructed tracks. A muon with a transverse momentum of 100 GeV can
-    be measured with less than 10\% resolution. 
+    be measured with greater than 10\% resolution. 
 
     \begin{figure}[ht]
         \begin{center}
@@ -311,23 +316,22 @@
     reconstruction of the second dimension. This stereo configuration has a
     resolution in $z$ of 52 $\mu$m. 
     
-    The next subdetector beyond the silicon tracker is the electromagnetic
-    calorimeter (ECal). The ECal is composed of 61,200 (14,648) lead tungstate
-    crystals placed into barrel (endcap) modules. Lead tungstate has a short
-    radiation length and quick response time while still being relatively
-    radiation hard and is the ideal scintillator for the ECal. It is the ECal's
-    responsibility to make energy measurements of particles primarily through
-    electromagnetic interactions while also providing general positional
-    information. For energies above 20 GeV, the ECal exhibits an energy
-    resolution below 1\%.
+    Beyond the silicon tracker is the electromagnetic calorimeter (ECal). The
+    ECal is composed of 61,200 (14,648) lead tungstate crystals placed into
+    barrel (endcap) modules. Lead tungstate has a short radiation length and
+    quick response time while still being relatively radiation hard making it
+    the scintillator of choice for the ECal. It is the ECal's responsibility to
+    make energy measurements of particles primarily through electromagnetic
+    interactions while also providing general positional information. For
+    energies above 20 GeV, the ECal exhibits an energy resolution below 1\%.
 
     Surrounding the ECal is the hadronic calorimeter or HCal. The HCal
     compliments the ECal in measuring energy of particles, particularly neutrons
     and other hadrons that are likely to escape the ECal before depositing all
     of their energy. The composition of HCal is alternating layers of brass
     absorber (chosen due its non-magnetic properties) and plastic scintillator
-    for sampling the particles energy. Like the ECal the HCal has a barrel and
-    endcap configuration.
+    for sampling the particles energy. Like the ECal, the HCal is put together
+    in a barrel and endcap configuration.
 
     Finally, encapsulating the tracker, calorimeters and solenoid magnet and
     embedded in the flux-return yoke is the muon system. It is comprised of
@@ -338,7 +342,7 @@
     suggests, the muon system identifies muons and via the curvature of their
     reconstructed path measures their momentum and charge sign. When combined
     with the silicon tracker, the full system exhibits momentum resolution of
-    $1\% - 10\%$ with the transition happening around $p_T \approx 100
+    $1\% - 10\%$ with a transition happening around $p_T \approx 100
     \text{GeV}$.
 
     The LHC's bunch crossing rate of 40 MHz simply yields too many interactions
@@ -347,48 +351,48 @@
     down to around 100 kHz by only considering events with reconstructed objects
     like photons, leptons or jets with transverse momentum requirements. This
     reduced rate of event information is then passed into the high-level trigger
-    (HLT) which uses more sophisticated software algorithms to get the rate down
-    to around 100 Hz. 100 Hz is the final rate at which event data is written
-    to storage.
+    (HLT) which uses more sophisticated software algorithms to reduce the rate
+    further, down to around 100 Hz. 100 Hz is the final rate at which event data
+    is written to storage.
 
 \section{Event Selection}
 
     \subsection{Signal Definition}
 
-        The signal physics process being considered is a muon undergoing
-        dark bremsstrahlung in one of the outer layers of the silicon tracker
-        whereby a dark photon is radiated and decays to dark matter. When the
-        muon makes this interaction this will incur a discontinuity in the
-        moun's full path as it traverses the detector. Since the muon is
-        deflected, its track will be subject to missing hits in the last layers
-        of the silicon tracker. Due to the first derivative discontinuity in the
-        muon's path and its track missing hits, it will likely not be
-        reconstructed as a ``global'' muon (information spanning the silicon
-        tracker to the muon chamber) and will be lost. A candidate signal event
-        has a track in the silicon tracker which is missing outer hits and has
-        no corresponding global muon to match to it. In the direction of the
-        track before the interaction point, there should also be little
-        activity in the calorimeters as the dark matter takes incident momentum
-        energy away undetected.
+        The signal physics process being considered is a muon undergoing dark
+        bremsstrahlung in one of the outer layers of the silicon tracker whereby
+        a dark photon is radiated, eventually decaying to dark matter. When the
+        muon has this interaction there will incur a discontinuity in the moun's
+        full path as it traverses the detector. Since the muon is deflected, its
+        track will be subject to missing hits in the last layers of the silicon
+        tracker. Due to the first derivative discontinuity in the muon's path
+        and its track missing hits, it will likely not be reconstructed as a
+        ``global'' muon (information spanning the silicon tracker to the muon
+        chamber) and will be lost. A candidate signal event has a track in the
+        silicon tracker which is missing outer hits and has no corresponding
+        global muon to match to it. In the direction of the track before the
+        interaction point, there should also be little activity in the
+        calorimeters as the dark matter takes incident momentum energy away
+        undetected.
 
     \subsection{Basic Acceptance}
 
-        The first selection pass made on the events is a basic acceptance
-        selection. Events are selected by the single muon trigger which requires
-        there to be at least one reconstructed muon in the event with a
-        transverse momentum of $p_{T} \gtrsim 25$~GeV.  Following this selection
-        by the trigger a recommended variety of cuts are applied to the
-        muons. A definite requirement of $p_{T} > 26$~GeV is applied
-        along with demanding $|\eta| < 2.1$. The muons are also
-        required to meet a tight ID requirement which demands a high-quality
-        reconstructed track and a global track fit with a $\chi^2$ fit
-        requirement. Similarly, a simple acceptance selection is also applied to
-        the tracks in an event.  Here we also require $p_{T} > 26$~GeV and
-        $|\eta| < 2.1$. The pseudorapidity requirements ensure that the muons
-        and tracks are within good acceptance of the inner tracking system.
-        Lastly, all muon-track pairs must be within a standard invariant mass
-        range around the $Z$ boson. We call for the invariant mass to be in the
-        range $60 < m_{\mu + \text{track}} < 120$~GeV.
+        In defining a signal selection, the first level of selection made on the
+        events is a basic acceptance selection. Events are selected by the
+        single muon trigger which requires there to be at least one
+        reconstructed muon in the event with a transverse momentum of $p_{T}
+        \gtrsim 25$~GeV.  Following this selection by the trigger a recommended
+        variety of cuts are applied to the muons. A definite requirement of
+        $p_{T} > 26$~GeV is applied along with demanding $|\eta| < 2.1$. The
+        muons are also required to meet a tight ID requirement which requires a
+        high-quality reconstructed track and a global track fit with a $\chi^2$
+        fit requirement. Similarly, a simple acceptance selection is also
+        applied to the tracks in an event.  Here we also require $p_{T} >
+        26$~GeV and $|\eta| < 2.1$ for tracks. The pseudorapidity requirements
+        ensure that the muons and tracks are within good acceptance of the inner
+        tracking system.  Lastly, all muon-track pairs must be within a standard
+        invariant mass range centered on the $Z$ boson mass. We call for the invariant
+        mass to be in the range $60 < m_{\mu + \text{track}} < 120$~GeV.
 
     \subsection{Quality Selection}
 
@@ -413,9 +417,9 @@
         \phi_2)^2}$} In addition, the tracks in each event are subjected to a
         $\chi^{2}$ requirement for their respective track fits. We veto for
         $\chi^{2} > 60$ and also for $\chi^{2} < 4$. Finally, the track's number
-        of hits combined with its number of missing hits must be greater than or
-        equal to 12. This gets rid of tracks with a low number of hits and large
-        $d_z$ but a $\chi^2$ value that passes the veto above.
+        of tracker hits combined with its number of missing hits must be greater
+        than or equal to 12. This gets rid of tracks with a low number of hits
+        and large $d_z$ but a $\chi^2$ value that passes the veto above.
 
         \begin{figure}[ht]%
             \centering
@@ -433,7 +437,7 @@
 
         The second part of the quality selection takes into account the detector
         geometry. The silicon tracking subdetector and muon system are not
-        continuous objects, they are pieced together and therefore there are
+        continuous objects, they are pieced together and as a result there are
         gaps where active sections meet. If muons and associated tracks fall
         with these regions they can lose hits and possibly get lost. These
         effects can result in tracks which appear to be missing hits and fail to
@@ -453,30 +457,40 @@
     \subsection{Signal Selection}
 
         At this point we have a subset of events that contain a well-isolated,
-        and well-fit track and we now make final selections to define a signal
+        and well-fit track and we now make final selections to define the signal
         event.  In an event we now require there to be exactly one track that
         does not match to a muon. The matching criteria between a muon and a
-        track is defined by the $\Delta R < 0.002$ between them. Of the events
-        that pass this selection, they are then required to have low energy
-        deposition in a cone of $\Delta R < 0.3$ in the direction of the
-        candidate track. Specifically in the HCal and ECal there should be no
-        more than 3~GeV in each calorimeter. On average a muon deposits 2~GeV in
-        the HCal and it is expected that the muon will fall within a cone of
-        $\Delta R < 0.3$.  Finally we select for tracks with missing hits in the
-        outer silicon tracker.
+        track is defined by a maximum $\Delta R$ between them, $\Delta R <
+        0.002$. Of the events that pass this selection, they are then required
+        to have low energy deposition in a cone of $\Delta R < 0.3$ in the
+        direction of the candidate track. Specifically in the HCal and ECal
+        there should be no more than 3~GeV in each calorimeter. 
+        \begin{figure}[ht]%
+            \centering
+            \subfloat[Energy in ECal in $\Delta R < 0.3$ Cone]{{\includegraphics[width=0.45\textwidth]{Figures/acceptSelection_trkCaloEMDepDR03.pdf} }}%
+            \subfloat[Energy in HCal in $\Delta R < 0.3$ Cone]{{\includegraphics[width=0.45\textwidth]{Figures/acceptSelection_trkCaloHadDepDR03.pdf} }}%
+            \caption{Cuts are made on the total amount of energy within a
+            $\Delta R < 0.3$ cone in the direction of the track. The peak around
+            2 GeV in the HCal plot indicates the presence of a muon minimally
+            ionizing through the cone while the stronger peak near 0 indicates
+            the muon is outside the cone. We choose to enforce $E_{HCal} < 3$
+            GeV such that the muon is still there.}
+            \label{fig:calodep}
+        \end{figure}
+        Finally we select for tracks with missing hits in the outer silicon
+        tracker. We include results for exactly one missing hit, exactly two and
+        exactly three.
 
 \section{Results}
 
     After applying the full signal selection to the Drell-Yan to leptons Monte
     Carlo sample we obtain the following cutflow tables where the signal track
-    is missing 1, 2 and 3 hits in the tracker.
+    is missing 1, 2 and 3 hits in the outer tracker.
 
-    \makebetter{STILL NOT FINAL TABLE}
-
-    \begin{table}[htbp] 
+    \begin{table}[!htbp] 
     \begin{center} 
     \begin{tabular}{ll}
-    $\mathrm{L} = 2.613\,\mathrm{fb}^{-1}$                                                                                                                                                                                                     & \multicolumn{1}{r}{Event yield}   \\ 
+                                                                                                                                                                                                         & \multicolumn{1}{r}{Event yield}   \\ 
     \hline 
     Pre-skimmed, single muon events           & 1557127 $\pm$ 1250.0              \\ 
     \\
@@ -491,18 +505,30 @@
     \hline 
     \end{tabular} 
     \end{center} 
-    \caption{An example cutflow table with the three major acceptance and
-    selection categories and the individual missing hits requirements. Note that
-    the 1, 2 and 3 missing hits are not cumulative of one another, they are each 
-    exclusive subsets of the signal selection.}
+    \caption{A full selection cutflow table delineated by the three major
+    acceptance and selection subcategories and the individual missing hits
+    requirements. Note that the 1, 2 and 3 missing hits are not cumulative of
+    one another, they are each exclusive subsets of the signal selection.}
     \end{table} 
+
+    \begin{figure}[!htbp]%
+        \centering
+        \subfloat[Invariant Mass of Muon-Track Pair]{{\includegraphics[width=0.45\textwidth]{Figures/trkHCalLow3GeVECalLow3GeVOneMuTrkMatch3Miss_invMassMuonTrack.pdf} }}%
+        \subfloat[$\eta$ Distribution for Tracks]{{\includegraphics[width=0.45\textwidth]{Figures/trkHCalLow3GeVECalLow3GeVOneMuTrkMatch3Miss_trkEta.pdf} }}%
+        \caption{Looking at the mass of a track and muon with the full event
+        selection we see that there is still a discernible mass peak for the
+        $Z$. Based on the broad $\eta$ distribution for the events, they do
+        not seem to be the result of a detector inefficiency.}
+        \label{fig:six}
+    \end{figure}
+
 
 \section{Future Considerations}
 
-    It is clear that the sophistication of this search can be expanded in a few
-    ways. It would be useful to have a background Monte Carlo sample that
-    contains not just global muons, but muons reconstructed in the muon chambers
-    only and muons reconstructed in the silicon tracker only. With this
+    It is clear that the sophistication of this search can be expanded in a
+    couple of  ways. It would be useful to have a background Monte Carlo sample
+    that contains not just global muons, but muons reconstructed in the muon
+    chambers only and muons reconstructed in the silicon tracker only. With this
     additional information we can try and match up tracker muon and chamber muon
     tracks to be able to identify a discontinuity associated with an interaction
     of a single muon. This information can then be checked against calorimeter
@@ -510,12 +536,14 @@
 
     A second relevant extension is to use the kinematics of a dark
     bremsstrahlung interaction due to a muon to create a signal sample to run on
-    that would allow us to refine cuts in the simple signal event selection.
-    With a deep understanding of the kinematics for a $\mathcal{O}
-    (45\,\text{GeV})$ muon undergoing dark bremsstrahlung the various cuts could
-    be made more powerful at rejecting background while still 
-    preserving signal. Then we can know how significant our reduced background
-    really is compared signal yield.
+    that would allow us to refine cuts in the presented simple signal event
+    selection.  With a deep understanding of the kinematics for a $\mathcal{O}
+    (45\,\text{GeV})$ muon undergoing dark bremsstrahlung in the CMS detector,
+    it may be that some cuts are actually too loose and could be made more
+    restrictive without excluding significant signal. Likewise, we might be
+    overly selective with some cuts and excluding too much signal.  In applying
+    the event selection to a signal sample we can know how significant our
+    reduced background really is compared signal yield.
 
 \section{Conclusion}
 
@@ -525,7 +553,7 @@
     quantification of the background for a light dark matter yielding process
     occurring at the LHC. With our basic acceptance, quality selection and
     final signal selection we expect a background of $6 \pm 2.45$ events when
-    requiring three missing hits.
+    requiring three missing hits in the outer tracker.
 
 \bibliography{JCH_Oral_Paper}{}
 \bibliographystyle{plain}
